--- a/package.json
+++ b/package.json
@@ -4,9 +4,17 @@
   "description": "nodejs-boilerplate",
   "main": "index.js",
   "scripts": {
+    "start": "node ./lib/index.js",
+    "dev": "nodemon --exec babel-node ./src/index.js",
+    "build": "babel --presets es2015 -d lib/ src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Nedim Akar (jack5341)",
   "license": "MIT",
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "nodemon": "^2.0.7"
+  }
 }
