--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Nedim Akar (jack5341)",
   "license": "MIT",
   "dependencies": {
+    "shelljs": "^0.8.4",
     "terminal-kit": "^2.0.7"
   },
   "devDependencies": {
